# Seb_HFT_Client

./: CMakeLists.txt  README.txt  add_ask.h  add_challenge_id.h  add_ticker.h  add_trader_name_and_terminate.h  bid_and_ask.h  char_id_to_int.h  compare_char_ask_a_leq_b.h  compare_char_bid_a_geq_b.h  find_and_add_bid_and_ask.h  find_best_bid_and_ask.h  find_target_line.h  handle_line.h  initialize_udp_connection.h  main_engine  main_engine.cpp  main_server  main_server.cpp  test_main_engine  test_main_engine.cpp
benchmarking/: benchmark_geq.cpp  benchmark_leq.cpp  benchmark_new_scheme  benchmark_new_scheme.cpp
include/: add_bid.h  add_challenge_id.h  add_trader_name_and_terminate.h  bid_and_ask.h  char_id_to_int.h  compare_char_ask_a_leq_b.h  compare_char_bid_a_geq_b.h  handle_line.h  initialize_tcp_connection.h  initialize_udp_connection.h
stringzilla/: stringzilla.hpp
tests/: test_SIMD.cpp  test_split  test_split.cpp
